# replace-template

./: .gitignore  .pre-commit-config.yaml  README.md  example_replacements.yaml  pyproject.toml  replace-template.py  replace_template.py  replacements.yaml
tests/: conftest.py  directory.py  test_replace_template.py
